--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -9,6 +9,7 @@
     <a href="Home">Home</a>
     <br>
     This is Michael Wachira Mwaniki,CBS support Engineer ,Huawei Kenya.
+<img src="./code.png" />
     <br />
     Welcome here
 
